--- a/Exe2/assets/css/style.css
+++ b/Exe2/assets/css/style.css
@@ -1,3 +1,5 @@
 body{
-    background-color: slateblue;
+    background-image: url(./../img/wallp.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
